GNOME Bugzilla – Bug 683864
Memory leak fixes
Last modified: 2012-09-13 08:16:13 UTC
.
Created attachment 224097 [details] [review] filter_groups: don't leak the widgets list
Created attachment 224098 [details] [review] connection-aggregator: fix contacts array leak
Created attachment 224099 [details] [review] empathy_roster_model_get_groups_for_individual: return a (transfer full) list gee_iterator_get() returns a new string, so we have to pass its ownership to the list to not leak it.
Attachment 224097 [details] pushed as 0dea719 - filter_groups: don't leak the widgets list Attachment 224098 [details] pushed as 6fbef3a - connection-aggregator: fix contacts array leak Attachment 224099 [details] pushed as 616f55e - empathy_roster_model_get_groups_for_individual: return a (transfer full) list
Created attachment 224111 [details] [review] theme-adium: fix priv->variant leak
Created attachment 224112 [details] [review] theme-adium: free the result of g_strsplit with g_strfreev Freeing with g_free() doesn't free the content of the array.
Created attachment 224113 [details] [review] empathy-contact: fix priv->logged_alias leak
Created attachment 224114 [details] [review] individual-menu: fix GeeIterator leak
Attachment 224111 [details] pushed as e90a360 - theme-adium: fix priv->variant leak Attachment 224112 [details] pushed as cb3a9fd - theme-adium: free the result of g_strsplit with g_strfreev Attachment 224113 [details] pushed as 61a7bd3 - empathy-contact: fix priv->logged_alias leak Attachment 224114 [details] pushed as 9bce1c2 - individual-menu: fix GeeIterator leak