filter_groups: don't leak the widgets list

https://bugzilla.gnome.org/show_bug.cgi?id=683864